<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MonitorFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imgLogo"
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"/>

            <RelativeLayout
                android:id="@+id/layoutSensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_toStartOf="@+id/lblTemperature" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/lblTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="12dp"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/graphic"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_below="@+id/layoutSensor"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_below="@+id/graphic">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnPlay"
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:text="@string/btnTxtPlay"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/cmbRange"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="52dp">

                </android.support.v7.widget.AppCompatSpinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/layoutPlay"
                android:gravity="center"
                android:layout_marginTop="24dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnGenerate"
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:text="@string/btnTxtGenerate"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnImport"
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="52dp"
                    android:text="@string/btnTxtImport"/>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</FrameLayout>
